@@ -108,6 +108,11 @@ Mod(1, 3)*y^2 + Mod(1, 3)) 1]
 [1 + I 5]
 
 
+[     -1  1]
+
+[1 + 2*I -2]
+
+
 [31271192761826143388782348951  1]
 
 [31274945109847936339856761591 -1]
