@@ -22,6 +22,7 @@ factor(5^4 + 5^4*I)
 factor(5 + I)
 factor(15+3*I)
 factor(4+4*I)
+factor((3+4*I)/25)
 q=31271192761826143388782348951/31274945109847936339856761591;
 factor(q,2)
 factor(q,500100)
